# QSVT-A-First-Principles-C-Framework-for-Quantum-Singular-Value-Transformation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qsvt.cpp  qsvt.hpp
BlockEncoding/: BlockEncoding.cpp  BlockEncoding.hpp
KAKDecomposition/: KAKDecomposition.cpp  KAKDecomposition.hpp
Qsp/: Qsp.cpp
include/: Lcu.hpp  Qsp.hpp
src/: CMakeLists.txt  KAKDecomposition.cpp  Lcu.cpp  Qsvt.cpp
tests/: CMakeLists.txt  test_qsvt.cpp
